# capacitor-dex-editor

./: .gitignore  CapacitorDexEditor.podspec  Package.swift  README.md  package-lock.json  package.json  rollup.config.mjs
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/assets/: colors.json
android/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
android/src/main/cpp/apk/: apk_handler.cpp  zip_utils.cpp
android/src/main/cpp/arsc/: arsc_parser.cpp
android/src/main/cpp/dex/: dex_builder.cpp  dex_parser.cpp  smali_disasm.cpp  smali_to_java.cpp
android/src/main/cpp/include/apk/: apk_handler.h  zip_utils.h
android/src/main/cpp/include/arsc/: arsc_parser.h
android/src/main/cpp/include/dex/: dex_builder.h  dex_parser.h  smali_disasm.h  smali_to_java.h
android/src/main/cpp/include/xml/: android_resources.h  axml_parser.h
android/src/main/cpp/xml/: axml_parser.cpp
android/src/main/java/com/aetherlink/dexeditor/: ApkManager.java  AxmlEditor.java  AxmlParser.java  CppDex.java  DexEditorPlugin.java  DexEditorPluginPlugin.java  DexManager.java  RustDex.java  SmaliEditorActivity.java
android/src/main/java/com/aetherlink/dexeditor/editor/: EditView.java  WordWrapLayout.java
android/src/main/res/drawable/: round_edittext_bg.xml
ios/Sources/DexEditorPluginPlugin/: DexEditorPlugin.swift  DexEditorPluginPlugin.swift
ios/Tests/DexEditorPluginPluginTests/: DexEditorPluginPluginTests.swift
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: lib.rs
src/: definitions.ts  index.ts  web.ts
(+25 files in other folders)
